Fixed custom button scss +  dark mode styles

--- a/playbook/app/pb_kits/playbook/pb_map/_map.scss
+++ b/playbook/app/pb_kits/playbook/pb_map/_map.scss
@@ -9,6 +9,7 @@
     @include pb_map_button;
     position: relative;
     margin-top: $space_xs;
+    box-shadow: $shadow_deep;
     .pb_icon_kit {
       width: $space_sm - 2;
       height: $space_sm;
@@ -199,7 +200,7 @@
     }
     .map-zoom-in-button,
     .map-zoom-out-button,
-    .map-flyto-button {
+    .map-flyto-button, .pb_map-custom-button {
       @include pb_map_button_dark;
     }
 
